ido_sdk_flutter/ido_sdk/protocol_sdk/protocol_ffi/ios/protocol_c.framework/Headers/ido_protocol_public_interface.h

//回调处理函数,app上报传输语音文件状态
//status：
//VOICE_TO_BLE_STATE_IDLE         = 0, //空闲态
//VOICE_TO_BLE_STATE_START        = 1, //开始
//VOICE_TO_BLE_STATE_END          = 2, //停止状态 正常的停止的
//VOICE_TO_BLE_STATE_TIME_OUT     = 3, //超时
//VOICE_TO_BLE_STATE_DISCONNECT   = 4, //断线
typedef void (*protocol_report_voice_file_tran_status_cb_handle)(uint8_t status);
//回调处理函数,app执行传输的固件回复结果回调
//evt事件：VBUS_EVT_VOICE_TRAN_TO_BLE_START(7633)、VBUS_EVT_VOICE_TRAN_TO_BLE_ABNORMAL_END(7636)、VBUS_EVT_VOICE_TRAN_TO_BLE_END(7635)
//备注：使用voiceFileTranToBleSetParam方法 固件返回结果事件号对应VBUS_EVT_VOICE_TRAN_TO_BLE_START
//使用voiceFileTranToBleStop方法 固件返回结果事件号对应VBUS_EVT_VOICE_TRAN_TO_BLE_END
//VBUS_EVT_VOICE_TRAN_TO_BLE_ABNORMAL_END事件对应的是传输过程中,固件回应包携带的错误码上报
typedef void (*protocol_report_voice_file_tran_send_operate_reply_cb_handle)(int evt, uint8_t error_code);
//回调处理函数,ble上报传输语音文件状态
//status：
//VOICE_STATE_IDLE             = 0, //空闲态
//VOICE_STATE_START            = 1, //开始
//VOICE_STATE_END              = 2, //停止状态 正常的停止的
//VOICE_STATE_TIME_OUT         = 3, //超时
//VOICE_STATE_DISCONNECT       = 4, //断线
//VOICE_STATE_LOG              = 5, //登录状态
//VOICE_STATE_APP_START        = 6, //开始
//VOICE_APP_START_FAILED       = 7, //app发起开始失败
//VOICE_STATE_APP_END          = 8, //停止状态
//VOICE_APP_STOP_FAILED        = 9, //app发起结束失败
//VOICE_APP_END_RETURN_BACK    = 10,//ALEXA 按钮退出到主界面
//VOICE_BLE_CHANGE_ALEXA_ALARM = 11,//固件修改alexa设置的闹钟，需要重新获取alexa的闹钟数据
typedef void (*protocol_report_opus_voice_file_tran_status_cb_handle)(uint8_t status);
//回调处理函数,ble上报传输语音文件丢包率
//size_lost_package:丢包数 size_all_package:总包数
typedef void (*protocol_report_opus_voice_file_tran_lost_data_cb_handle)(uint32_t size_lost_package, uint32_t size_all_package);
//回调处理函数,opus数据上报
//data:pcm编码数据 data_len:数据大小
typedef void (*protocol_report_opus_voice_file_tran_data_cb_handle)(char * data, int data_len);
/**
 * @brief SPP设置文件传输Buff，输入文件路径由C库读取文件数据
 * @param dataType 文件类型
 * {0 无效
 * 1 分区表
 * 2 apgs文件
 * 3 gps固件}
 * @param srcPath 素材文件路径   最大4096字节
 * @param dstName 目标文件名+后缀, 注:文件名可以是空但是后缀不能为空(排除掉某些固定名称的文件例如:EPO.DAT) 最大256字节
 * @param compressionType 压缩类型
 * {0 为不适用压缩
 * 1 为zlib压缩
 * 2 为fastlz压缩}
 * @param  oriSize 压缩前文件大小
 * {目前对表盘文件有效，表示没有压缩前的文件大小，即iwf文件大小}
 * 如果需要传递文件名 ，dataType需要使用0xff,如果是传递agps，两个分部填""和0就可以了
 * @return SUCCESS(0) 成功
 */
extern int sppTranDataSetBuffByPath(int dataType,char *srcPath,char *dstName,int compressionType,int oriSize);
/**
 * @brief 设置PRN,接收num包通知一次, 用来调节速度和可靠性之间的平衡
 * @param num  app每发num包, 固件回应一次
 * @return:
 *   SUCCESS(0) : 成功
 */
extern int sppTranDataSetPRN(int num);
//--------------------------- alexa语音文本传输 --------------------------------
/**
 * @brief: app设置语音文件传输配置
 * @param prn app控制ble接收几个包回复一次数据
 * @param voiceType 传输类型  0:无效 1:sbc 2:opus 3:mp3
 * @param fileLen 语音文件大小
 * @return:
 *   SUCCESS(0) : 成功
 */
extern int voiceFileTranToBleSetParam(int prn, int voiceType, int fileLen);
/**
 * @brief: app开始传输语音文件
 * @param filename 需要传输的语音文件完整路径 包括文件名
 * @return:
 *   SUCCESS(0) : 成功
 */
extern int voiceFileTranToBleStart(char *filename);
/**
 * @brief: app停止发送语音数据
 * @return:
 *   SUCCESS(0) : 成功
 */
extern int voiceFileTranToBleStop(void);
/**
 * @brief: app传输语音文件状态回调注册
 * @return:
 *   SUCCESS(0) : 成功
 */
extern int voiceFileTranToBleStateCbReg(protocol_report_voice_file_tran_status_cb_handle func);
/**
 * @brief: app传输语音文件操作固件回复结果回调注册
 * @return:
 *   SUCCESS(0) : 成功
 */
extern int voiceFileTranToBleSendOperateReplyCbReg(protocol_report_voice_file_tran_send_operate_reply_cb_handle func);
/**
 * @brief: 通知ble停止传输opus数据(语音数据)
 * @return:
 *   SUCCESS(0) : 成功
 */
extern int stopReceiveVoiceDataFromBle(void);
/**
 * @brief: 上报接收到的opus语音文件状态回调注册
 * @return:
 *   SUCCESS(0) : 成功
 */
extern int reportVoiceDataFromBleOpusStateCbReg(protocol_report_opus_voice_file_tran_status_cb_handle func);
/**
 * @brief: 上报接收的opus语音文件丢包率回调注册
 * @return:
 *   SUCCESS(0) : 成功
 */
extern int reportVoiceDataFromBleLostDataCbReg(protocol_report_opus_voice_file_tran_lost_data_cb_handle func);
/**
 * @brief: 上报接收opus语音文件每段pcm编码数据回调注册
 * @return:
 *   SUCCESS(0) : 成功
 */
extern int reportVoiceDataFromBleEachPcmDataCbReg(protocol_report_opus_voice_file_tran_data_cb_handle func);
/**
 * @brief:上报接收的opus上报语音文件数据回调注册
 * @return:
 *   SUCCESS(0) : 成功
 */
extern int reportVoiceDataFromBleDataCbReg(protocol_report_opus_voice_file_tran_data_cb_handle func);
/**
 * @brief:上报接收的opus上报每帧的语音文件数据回调注册
 * @return:
 *   SUCCESS(0) : 成功
 */
extern int reportVoiceDataFromBleEachEncodeDataCbReg(protocol_report_opus_voice_file_tran_data_cb_handle func);
// ------------------------------ GPS轨迹工具 ------------------------------
/**
 * @brief: gsp运动后优化轨迹,根据运动类型初始化速度阈值，若输入其他运动类型，会导致无运动轨迹
 * @param motion_type_in
 * 运动类型:
 * {
 * 1、户外走路 = 52, 走路 = 1, 徒步 = 4, 运动类型设为0
 * 2、户外跑步 = 48, 跑步 = 2, 运动类型设为1
 * 3、户外骑行 = 50, 骑行 = 3, 运动型性设为2
 *}
 * @return
 *  初始化参数,满足运动类型输出结果为1，否则为0
 */
extern int initType(int motion_type_in);
/**
 * @brief 初始化算法内部参数
 */
extern void initParameter(void);
/**
 * @brief gps数据实时处理入口,需要对输出的数据进行判断，若纬度为-180则为错误值，不应该输出 ，每次只会传进来一个坐标
 * @param data json字符串
 * @param len 字符串长度 不超过2MByte
 * json字符串内容:
 * android:
 * { lon,经度,数据类型double
 *   lat,纬度,数据类型double
 *   timestamp,时间戳,数据类型int
 *   accuracy,定位精度,数据类型double
 *   gpsaccuracystatus,定位等级，0 = 定位未知, 1 = 定位好, 2 = 定位差,数据类型int}
 *   ios:
 * { lon,经度,数据类型double
 *   lat,纬度,数据类型double
 *   timestamp,时间戳,数据类型int
 *   hor_accuracy,水平精度,数据类型double
 *   ver_accuracy,垂直精度,数据类型double
 * }
 * @return json字符串 内容与上面json字符串内容一致
 */
extern char *appGpsAlgProcessRealtime(char *data,int len);
/**
 * @brief 平滑数据，结果保存在数组lat和lon中
 * @param data json字符串
 * @param len 字符串长度
 * json字符串内容:
 * {lat,纬度数组,长度为len,数据类型double
 *  lon,经度数组,长度为len,数据类型double
 *  len,数据长度}
 * @return json字符串 内容与上面json字符串内容一致
 */
extern char *smoothData(char *data,int len);