ido_sdk_flutter/ido_sdk/protocol_sdk/protocol_ffi/lib/src/ffi/ido_protocol_ffi.g.dart


  /// @brief SPP设置文件传输Buff，输入文件路径由C库读取文件数据
  /// @param dataType 文件类型
  /// {0 无效
  /// 1 分区表
  /// 2 apgs文件
  /// 3 gps固件}
  /// @param srcPath 素材文件路径   最大4096字节
  /// @param dstName 目标文件名+后缀, 注:文件名可以是空但是后缀不能为空(排除掉某些固定名称的文件例如:EPO.DAT) 最大256字节
  /// @param compressionType 压缩类型
  /// {0 为不适用压缩
  /// 1 为zlib压缩
  /// 2 为fastlz压缩}
  /// @param  oriSize 压缩前文件大小
  /// {目前对表盘文件有效，表示没有压缩前的文件大小，即iwf文件大小}
  /// 如果需要传递文件名 ，dataType需要使用0xff,如果是传递agps，两个分部填""和0就可以了
  /// @return SUCCESS(0) 成功
  int sppTranDataSetBuffByPath(
    int dataType,
    ffi.Pointer<ffi.Char> srcPath,
    ffi.Pointer<ffi.Char> dstName,
    int compressionType,
    int oriSize,
  ) {
    return _sppTranDataSetBuffByPath(
      dataType,
      srcPath,
      dstName,
      compressionType,
      oriSize,
    );
  }

  late final _sppTranDataSetBuffByPathPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Int)>>('sppTranDataSetBuffByPath');
  late final _sppTranDataSetBuffByPath =
      _sppTranDataSetBuffByPathPtr.asFunction<
          int Function(
              int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, int)>();

  /// @brief 设置PRN,接收num包通知一次, 用来调节速度和可靠性之间的平衡
  /// @param num  app每发num包, 固件回应一次
  /// @return:
  /// SUCCESS(0) : 成功
  int sppTranDataSetPRN(
    int num,
  ) {
    return _sppTranDataSetPRN(
      num,
    );
  }

  late final _sppTranDataSetPRNPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
          'sppTranDataSetPRN');
  late final _sppTranDataSetPRN =
      _sppTranDataSetPRNPtr.asFunction<int Function(int)>();

  /// --------------------------- alexa语音文本传输 --------------------------------
  /// /**
  ///  * @brief: app设置语音文件传输配置
  ///  * @param prn app控制ble接收几个包回复一次数据
  ///  * @param voiceType 传输类型  0:无效 1:sbc 2:opus 3:mp3
  ///  * @param fileLen 语音文件大小
  ///  * @return:
  ///  *   SUCCESS(0) : 成功
  ///  */
  int voiceFileTranToBleSetParam(
    int prn,
    int voiceType,
    int fileLen,
  ) {
    return _voiceFileTranToBleSetParam(
      prn,
      voiceType,
      fileLen,
    );
  }

  late final _voiceFileTranToBleSetParamPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int, ffi.Int)>>(
          'voiceFileTranToBleSetParam');
  late final _voiceFileTranToBleSetParam =
      _voiceFileTranToBleSetParamPtr.asFunction<int Function(int, int, int)>();

  /// @brief: app开始传输语音文件
  /// @param filename 需要传输的语音文件完整路径 包括文件名
  /// @return:
  /// SUCCESS(0) : 成功
  int voiceFileTranToBleStart(
    ffi.Pointer<ffi.Char> filename,
  ) {
    return _voiceFileTranToBleStart(
      filename,
    );
  }

  late final _voiceFileTranToBleStartPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
          'voiceFileTranToBleStart');
  late final _voiceFileTranToBleStart = _voiceFileTranToBleStartPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// @brief: app停止发送语音数据
  /// @return:
  /// SUCCESS(0) : 成功
  int voiceFileTranToBleStop() {
    return _voiceFileTranToBleStop();
  }

  late final _voiceFileTranToBleStopPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('voiceFileTranToBleStop');
  late final _voiceFileTranToBleStop =
      _voiceFileTranToBleStopPtr.asFunction<int Function()>();

  /// @brief: app传输语音文件状态回调注册
  /// @return:
  /// SUCCESS(0) : 成功
  int voiceFileTranToBleStateCbReg(
    protocol_report_voice_file_tran_status_cb_handle func,
  ) {
    return _voiceFileTranToBleStateCbReg(
      func,
    );
  }

  late final _voiceFileTranToBleStateCbRegPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(
                  protocol_report_voice_file_tran_status_cb_handle)>>(
      'voiceFileTranToBleStateCbReg');
  late final _voiceFileTranToBleStateCbReg =
      _voiceFileTranToBleStateCbRegPtr.asFunction<
          int Function(protocol_report_voice_file_tran_status_cb_handle)>();

  /// @brief: app传输语音文件操作固件回复结果回调注册
  /// @return:
  /// SUCCESS(0) : 成功
  int voiceFileTranToBleSendOperateReplyCbReg(
    protocol_report_voice_file_tran_send_operate_reply_cb_handle func,
  ) {
    return _voiceFileTranToBleSendOperateReplyCbReg(
      func,
    );
  }

  late final _voiceFileTranToBleSendOperateReplyCbRegPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(
                  protocol_report_voice_file_tran_send_operate_reply_cb_handle)>>(
      'voiceFileTranToBleSendOperateReplyCbReg');
  late final _voiceFileTranToBleSendOperateReplyCbReg =
      _voiceFileTranToBleSendOperateReplyCbRegPtr.asFunction<
          int Function(
              protocol_report_voice_file_tran_send_operate_reply_cb_handle)>();

  /// @brief: 通知ble停止传输opus数据(语音数据)
  /// @return:
  /// SUCCESS(0) : 成功
  int stopReceiveVoiceDataFromBle() {
    return _stopReceiveVoiceDataFromBle();
  }

  late final _stopReceiveVoiceDataFromBlePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'stopReceiveVoiceDataFromBle');
  late final _stopReceiveVoiceDataFromBle =
      _stopReceiveVoiceDataFromBlePtr.asFunction<int Function()>();

  /// @brief: 上报接收到的opus语音文件状态回调注册
  /// @return:
  /// SUCCESS(0) : 成功
  int reportVoiceDataFromBleOpusStateCbReg(
    protocol_report_opus_voice_file_tran_status_cb_handle func,
  ) {
    return _reportVoiceDataFromBleOpusStateCbReg(
      func,
    );
  }

  late final _reportVoiceDataFromBleOpusStateCbRegPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(
                  protocol_report_opus_voice_file_tran_status_cb_handle)>>(
      'reportVoiceDataFromBleOpusStateCbReg');
  late final _reportVoiceDataFromBleOpusStateCbReg =
      _reportVoiceDataFromBleOpusStateCbRegPtr.asFunction<
          int Function(
              protocol_report_opus_voice_file_tran_status_cb_handle)>();

  /// @brief: 上报接收的opus语音文件丢包率回调注册
  /// @return:
  /// SUCCESS(0) : 成功
  int reportVoiceDataFromBleLostDataCbReg(
    protocol_report_opus_voice_file_tran_lost_data_cb_handle func,
  ) {
    return _reportVoiceDataFromBleLostDataCbReg(
      func,
    );
  }

  late final _reportVoiceDataFromBleLostDataCbRegPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(
                  protocol_report_opus_voice_file_tran_lost_data_cb_handle)>>(
      'reportVoiceDataFromBleLostDataCbReg');
  late final _reportVoiceDataFromBleLostDataCbReg =
      _reportVoiceDataFromBleLostDataCbRegPtr.asFunction<
          int Function(
              protocol_report_opus_voice_file_tran_lost_data_cb_handle)>();

  /// @brief: 上报接收opus语音文件每段pcm编码数据回调注册
  /// @return:
  /// SUCCESS(0) : 成功
  int reportVoiceDataFromBleEachPcmDataCbReg(
    protocol_report_opus_voice_file_tran_data_cb_handle func,
  ) {
    return _reportVoiceDataFromBleEachPcmDataCbReg(
      func,
    );
  }

  late final _reportVoiceDataFromBleEachPcmDataCbRegPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(
                  protocol_report_opus_voice_file_tran_data_cb_handle)>>(
      'reportVoiceDataFromBleEachPcmDataCbReg');
  late final _reportVoiceDataFromBleEachPcmDataCbReg =
      _reportVoiceDataFromBleEachPcmDataCbRegPtr.asFunction<
          int Function(protocol_report_opus_voice_file_tran_data_cb_handle)>();

  /// @brief:上报接收的opus上报语音文件数据回调注册
  /// @return:
  /// SUCCESS(0) : 成功
  int reportVoiceDataFromBleDataCbReg(
    protocol_report_opus_voice_file_tran_data_cb_handle func,
  ) {
    return _reportVoiceDataFromBleDataCbReg(
      func,
    );
  }

  late final _reportVoiceDataFromBleDataCbRegPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(
                  protocol_report_opus_voice_file_tran_data_cb_handle)>>(
      'reportVoiceDataFromBleDataCbReg');
  late final _reportVoiceDataFromBleDataCbReg =
      _reportVoiceDataFromBleDataCbRegPtr.asFunction<
          int Function(protocol_report_opus_voice_file_tran_data_cb_handle)>();

  /// @brief:上报接收的opus上报每帧的语音文件数据回调注册
  /// @return:
  /// SUCCESS(0) : 成功
  int reportVoiceDataFromBleEachEncodeDataCbReg(
    protocol_report_opus_voice_file_tran_data_cb_handle func,
  ) {
    return _reportVoiceDataFromBleEachEncodeDataCbReg(
      func,
    );
  }

  late final _reportVoiceDataFromBleEachEncodeDataCbRegPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(
                  protocol_report_opus_voice_file_tran_data_cb_handle)>>(
      'reportVoiceDataFromBleEachEncodeDataCbReg');
  late final _reportVoiceDataFromBleEachEncodeDataCbReg =
      _reportVoiceDataFromBleEachEncodeDataCbRegPtr.asFunction<
          int Function(protocol_report_opus_voice_file_tran_data_cb_handle)>();

  /// ------------------------------ GPS轨迹工具 ------------------------------
  /// /**
  ///  * @brief: gsp运动后优化轨迹,根据运动类型初始化速度阈值，若输入其他运动类型，会导致无运动轨迹
  ///  * @param motion_type_in
  ///  * 运动类型:
  ///  * {
  ///  * 1、户外走路 = 52, 走路 = 1, 徒步 = 4, 运动类型设为0
  ///  * 2、户外跑步 = 48, 跑步 = 2, 运动类型设为1
  ///  * 3、户外骑行 = 50, 骑行 = 3, 运动型性设为2
  ///  *}
  ///  * @return
  ///  *  初始化参数,满足运动类型输出结果为1，否则为0
  ///  */
  int initType(
    int motion_type_in,
  ) {
    return _initType(
      motion_type_in,
    );
  }

  late final _initTypePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>('initType');
  late final _initType = _initTypePtr.asFunction<int Function(int)>();

  /// @brief 初始化算法内部参数
  void initParameter() {
    return _initParameter();
  }

  late final _initParameterPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('initParameter');
  late final _initParameter = _initParameterPtr.asFunction<void Function()>();

  /// @brief gps数据实时处理入口,需要对输出的数据进行判断，若纬度为-180则为错误值，不应该输出 ，每次只会传进来一个坐标
  /// @param data json字符串
  /// @param len 字符串长度 不超过2MByte
  /// json字符串内容:
  /// android:
  /// { lon,经度,数据类型double
  /// lat,纬度,数据类型double
  /// timestamp,时间戳,数据类型int
  /// accuracy,定位精度,数据类型double
  /// gpsaccuracystatus,定位等级，0 = 定位未知, 1 = 定位好, 2 = 定位差,数据类型int}
  /// ios:
  /// { lon,经度,数据类型double
  /// lat,纬度,数据类型double
  /// timestamp,时间戳,数据类型int
  /// hor_accuracy,水平精度,数据类型double
  /// ver_accuracy,垂直精度,数据类型double
  /// }
  /// @return json字符串 内容与上面json字符串内容一致
  ffi.Pointer<ffi.Char> appGpsAlgProcessRealtime(
    ffi.Pointer<ffi.Char> data,
    int len,
  ) {
    return _appGpsAlgProcessRealtime(
      data,
      len,
    );
  }

  late final _appGpsAlgProcessRealtimePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>, ffi.Int)>>('appGpsAlgProcessRealtime');
  late final _appGpsAlgProcessRealtime = _appGpsAlgProcessRealtimePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>, int)>();

  /// @brief 平滑数据，结果保存在数组lat和lon中
  /// @param data json字符串
  /// @param len 字符串长度
  /// json字符串内容:
  /// {lat,纬度数组,长度为len,数据类型double
  /// lon,经度数组,长度为len,数据类型double
  /// len,数据长度}
  /// @return json字符串 内容与上面json字符串内容一致
  ffi.Pointer<ffi.Char> smoothData(
    ffi.Pointer<ffi.Char> data,
    int len,
  ) {
    return _smoothData(
      data,
      len,
    );
  }

  late final _smoothDataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>, ffi.Int)>>('smoothData');
  late final _smoothData = _smoothDataPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>, int)>();
